--- a/bluebottle/suggestions/templates/suggestions/base.hbs
+++ b/bluebottle/suggestions/templates/suggestions/base.hbs
@@ -1,2 +1,2 @@
 {% include 'suggestions/suggestion_list.hbs' %}
-{% include 'suggestions/suggestion_modal.hbs' %}
+{% include 'suggestions/suggestion.hbs' %}
