--- a/bluebottle/bb_projects/templates/bb_projects/manage/main.hbs
+++ b/bluebottle/bb_projects/templates/bb_projects/manage/main.hbs
@@ -32,7 +32,7 @@
 
                         {{/if}}
                     </div>
-                    <ul id="campaign-steps" class="{{#if isStatusPlanNew}} steps {{else}} tabs {{/if}}">
+                    <ul id="campaign-steps" {{bind-attr class="isStatusPlanNew:steps:tabs"}}>
 
                         <li class="tab">
                             {{#link-to "myProject.pitch" classBinding=":tab-link validPitch:validated"}}
