BOOK-1142 Share project flyer modal fixes

--- a/bluebottle/common/static/sass/modules/_modal.scss
+++ b/bluebottle/common/static/sass/modules/_modal.scss
@@ -301,6 +301,7 @@ $gray-border-hover                                         : #9F9F9F;
 
 				.counter-holder {
 					float: right;
+					color: $gray-border;
 				}
 			}
 
