Fix styling of privacy policy modal

--- a/bluebottle/common/static/sass/modules/_modal.scss
+++ b/bluebottle/common/static/sass/modules/_modal.scss
@@ -337,8 +337,9 @@ $gray-border-hover                                         : #9F9F9F;
 					border: solid 1px #ccc;
 
 					p {
-						color: #ccc!important;
+						color: #4a4a4a !important;
 						font-size: 12px!important;
+						line-height: 15px;
 					}
 				}
 			}
