BOOK: Design improvements project start page

--- a/bluebottle/common/static/sass/new-sass/layout/_global.scss
+++ b/bluebottle/common/static/sass/new-sass/layout/_global.scss
@@ -25,6 +25,10 @@ html, body, #site {
     }
 }
 
+#home, #about-new, #start-campaign, #business {
+    margin-bottom: -40px; // reset 
+}
+
 .modal-fullscreen-background, #home, #about-new, #start-campaign, #business {
 
     .btn {
