--- a/bluebottle/suggestions/templates/suggestions/suggestion.hbs
+++ b/bluebottle/suggestions/templates/suggestions/suggestion.hbs
@@ -6,7 +6,7 @@
     <div {{bindAttr class=":modal-fullscreen-content :suggestion-detail"}}>
         <span {{action 'closeModal'}} class="modal-fullscreen-close"></span>
         <h4 class="suggestion-detail-title">{{this.title}}</h4>
-        <big>{% blocktrans %}Be sure to contact the partner organisation in order to fully understand their needs.{% endblocktrans %}</big>
+        <big>{% blocktrans %}Be sure to contact the the partner organisation before submitting the project.{% endblocktrans %}</big>
         <div class="row">
             <div class="col4">
                 <h3>{% trans "Details" %}</h3>
