--- a/bluebottle/suggestions/templates/suggestions/suggestion_list.hbs
+++ b/bluebottle/suggestions/templates/suggestions/suggestion_list.hbs
@@ -9,15 +9,9 @@
             {{#if hasSuggestions }}
                 <h2 class="suggestion-title">Adopt a local project</h2>
                 <div class="suggestion-block">
-                    <span class="suggestion-description">
-                        {% blocktrans %}
-                            This local initiatives could use your help.<br>
-                            Select a project suggestion to find out more.
-                        {% endblocktrans %}
-                    </span>
                     <ul class="suggestion-list">
                     {{#each suggestion in model }}
-                        <li class="suggestion-item" {{action  "showSuggestion" suggestion }}>
+                        <li class="suggestion-item" {{action "showSuggestion" suggestion }}>
                             <strong class="item-title">{{ suggestion.title }}</strong>
                             <span class="item-deadline">
                                 {% trans 'On' %} {{localize suggestion.deadline formatting="dd/MM/yyyy"}}
@@ -29,14 +23,18 @@
                         </li>
                     {{/each}}
                     </ul>
+                    <span class="suggestion-description">
+                        <em>{% blocktrans %}
+                            This local initiatives could use your help. Select a project suggestion to find out more.
+                            {% endblocktrans %}</em>
+                    </span>
                 </div>
             {{ else }}
                 <h2 class="suggestion-title">No local initiatives found.</h2>
                 <div class="suggestion-block">
                     <span class="suggestion-description">
                         {% blocktrans %}
-                            We couldn't find any initiatives near your Booking.com <br>
-                            destination. Feel free to <a>create your own project.</a>
+                            We couldn't find any initiatives near your Booking.com destination. Feel free to <a href="">create your own project.</a>
                         {% endblocktrans %}
                     </span>
                     <div class="suggestion-image nothing-found"></div>
@@ -47,8 +45,7 @@
                 <div class="suggestion-block">
                     <span class="suggestion-description">
                         {% blocktrans %}
-                            Please add your Booking.com office location to your profile <br>
-                            to see if we can find you an interesting project.
+                            Please add your Booking.com office location to your profile to see if we can find you an interesting project.
                         {% endblocktrans %}
                     </span>
                     <div class="suggestion-image"></div>
