BB-2610 fixed read more button

--- a/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
+++ b/bluebottle/bb_tasks/templates/bb_tasks/task.hbs
@@ -25,7 +25,7 @@
                         <p><strong>{% trans "Goal" %}:</strong> {{end_goal}}</p>
                     {{/if}}
                 </div>
-                <a class="project-more read-more">{% trans "Read more" %}</a>
+                <a {{action 'readMore'}} class="project-more read-more">{% trans "Read more" %}</a>
             </article>
             <aside class="project-media">
                 <div class="project-share">
