--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation.mail.html
@@ -4,15 +4,14 @@
 {% block content %}
 {% blocktrans with amount=amount donor_name=donor_name site=site link=link %}
 
-Hello {{first_name}},
+Hello {{ first_name }},
 <br><br>
 You received a &euro; {{ amount }} donation from {{ donor_name }}.
 <br><br>
 Quickly thank your supporter by posting a personal message on your project page.
-
 {% endblocktrans %}
 {% endblock %}
 
 {% block action %}
-<a href="{{ site }}{{ link }}" class="action-email">{% trans 'Say thanks!' context 'email: new oneoff donation' %}</a>
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'Say thanks' context 'email' %}!</a>
 {% endblock %}
