--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
@@ -2,15 +2,16 @@
 {% load i18n %}
 
 {% block content %}
-{% blocktrans with amount=amount|floatformat:2 donor_name=donor_name site=site link=link receiver=receiver %}
-Hello {{first_name}},
-<br/><br/>
-You just received a EUR {{ amount }} donation!
-<br/><br/>
-Curious who made a donation, check your fundraiser page:
-<br/>
-<a href="{{ site }}{{ link }}">{{site}}{{link}}</a>.
-<br/><br/>
-Keep up the good work!<br/>
+{% blocktrans with amount=amount donor_name=donor_name site=site link=link receiver=receiver %}
+
+Hello {{ first name }},
+
+You received a &euro; {{ amount }} donation from {{ donor_name }}.
+
+Quickly thank your supporter by posting a personal message on your fundraiser page.
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ site }}{{ link }}" class="action">{% trans 'Say thanks!' context 'email' %}!</a>
 {% endblock %}
