--- a/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
+++ b/bluebottle/bb_follow/templates/bb_follow/mails/wallpost_mail.mail.html
@@ -2,17 +2,16 @@
 {% load i18n %}
 
 {% block content %}
-{% blocktrans%}
-Hi {{first_name}},
+{% blocktrans with receiver_name=receiver.first_name author_name=author.first_name %}
 
-<br/>
-<br/>
-There has been an update on a {{follow_object}} you follow. 
-<br/><br/>
-Here's an excerpt of the update:<br/><br/>
-{{wallpost_text}}...
-<br/><br/><br/>
-Read the full story <a href={{link}}>here</a>.
-<br/></br/>
+Hello {{ receiver_name }},
+<br><br>
+{{ author_name }} added a new post on a {{ follow_object }} you follow:
+<br><br>
+<i>{{ wallpost_text }}...</i>
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ here }}" class="action-email">{% trans 'View full update' context 'email' %}</a>
 {% endblock %}
