--- a/bluebottle/bb_tasks/templates/task_closed_owner.mail.html
+++ b/bluebottle/bb_tasks/templates/task_closed_owner.mail.html
@@ -3,21 +3,17 @@
 
 {% block content %}
 {% blocktrans with sender_name=sender.mail_name receiver_name=receiver.mail_name task_title=task.title site_name=site.name %}
+
 Dear {{ receiver_name }},
-<br/><br/>
-Unfortunately the deadline of your task is reached and no members have applied...<br/><br/>
 
-You now have two options:<br/>
-<ol>
-<li>Option 1. Change the status and deadline and start your campaign! Find a colleague with that unique skill that you need and sell this task(s)! You can always ask your local connector for tips & tricks. </li>
-<li>Option 2. Relax and do nothing. Your tasks will close automatically.</li>
-</ol>
-You can edit your task <a target=_blank href="{{ site }}{{ edit_link }}">here</a><br/>
-
-<br/>
-Thanks again and we hope to see you back on <Bluebottle Project> soon!<br/><br/>
-
-Warm regards,<br/><br/>
-
+Unfortunately the deadline of your task is reached and no volunteers have applied.
+<br><br>
+You can change the status and deadline of the task and keep on searching for volunteers. 
+<br><br>
+Thanks again and we hope to see you back on {{ site_name }} soon!
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'Edit task' context 'email' %}</a>
 {% endblock %}
