--- a/bluebottle/bb_tasks/templates/task_member_accepted.mail.html
+++ b/bluebottle/bb_tasks/templates/task_member_accepted.mail.html
@@ -3,13 +3,15 @@
 
 {% block content %}
 {% blocktrans with sender_name=sender.short_name receiver_name=receiver.short_name task_title=task.title %}
-Hi {{ receiver_name }},<br/>
-<br/>
-Congratulations! The project owner, {{ sender_name }}, assigned the task <a href="{{ site }}{{ link }}">{{ task_title }}</a> to you!
-<br/><br/>
-Good luck with the task and feel free to keep your colleagues updated on the progress.
-<br/><br/>
-{{ site_name }}
+
+Hi {{ receiver_name }},
+<br><br>
+Great news! The project initiatior, {{ sender_name }}, assigned the task <i>{{ task_title }}</i> to you.
+<br><br>
+Good luck taking on the task and feel free to keep everyone updated on the progress.
 {% endblocktrans %}
 {% endblock %}
 
+{% block action %}
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'View task' context 'email' %}</a>
+{% endblock %}
