--- a/bluebottle/bb_tasks/templates/task_member_applied.mail.html
+++ b/bluebottle/bb_tasks/templates/task_member_applied.mail.html
@@ -5,17 +5,16 @@
 {% blocktrans with sender_name=sender.short_name receiver_name=receiver.short_name task_title=task.title motivation=motivation %}
 
 Hello {{ receiver_name }},
-<br/><br/>
-Good news! {{ sender_name }} applied for your task {{ task_title }}.
-<br/><br/>
+<br><br>
+Good news! {{ sender_name }} applied for your task <i>{{ task_title }}</i>.
+<br><br>
 {{ sender_name }} replied with the following motivation to your task:<br>
 {{ motivation }}
-<br/><br/>
+<br><br>
 Please accept or reject this application, he or she will receive an email when you have confirmed the status.
-
 {% endblocktrans %}
 {% endblock %}
 
 {% block action %}
-<a href="{{ site }}{{ link }}" class="action">{% trans 'Confirm now' context 'email: task member applied' %}</a>
+<a href="{{ site }}{{ link }}" class="action">{% trans 'Confirm now' context 'email' %}</a>
 {% endblock %}
