--- a/bluebottle/wallposts/templates/project_wallpost_reaction_new.mail.html
+++ b/bluebottle/wallposts/templates/project_wallpost_reaction_new.mail.html
@@ -2,13 +2,14 @@
 {% load i18n %}
 
 {% block content %}
-{% blocktrans with receiver_name=receiver.first_name author_name=author.full_name %}
+{% blocktrans with receiver_name=receiver.first_name author_name=author.first_name project_title=project.title %}
+
 Hello {{ receiver_name }},
-<br/><br/>
-<b>{{ author_name }}</b> commented on your wallpost.
-<br/><br/>
-Don't wait any longer and <a href="{{ site }}{{ link }}">check it out</a>.
-<br/><br/>
-1%Club
+<br><br>
+{{ author_name }} just posted a comment on your <i>{{ project_title }}</i> wallpost.
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'View comment' context 'email' %}</a>
 {% endblock %}
