--- a/bluebottle/wallposts/templates/project_wallpost_reaction_same_wallpost.mail.html
+++ b/bluebottle/wallposts/templates/project_wallpost_reaction_same_wallpost.mail.html
@@ -2,11 +2,14 @@
 {% load i18n %}
 
 {% block content %}
-{% blocktrans with receiver_name=receiver.first_name author_name=author.full_name %}
-Hi {{ receiver_name }},<br/>
-<br/>
-<strong>{{ author_name }}</strong> left a comment on your post! <a href="{{ site }}{{ link }}">Read the comment here.</a><br/>
-<br/>
-1%Club
+{% blocktrans with receiver_name=receiver.first_name author_name=author.first_name project_title=project.title %}
+
+Hello {{ receiver_name }},
+<br><br>
+{{ author_name }} just posted a comment on your <i>{{ project_title }}</i> wallpost.
 {% endblocktrans %}
+{% endblock %}
+
+{% block action %}
+<a href="{{ site }}{{ link }}" class="action-email">{% trans 'View comment' context 'email' %}</a>
 {% endblock %}
