Another attempt to fix testst... This is getting annoying

--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
@@ -4,10 +4,10 @@
 {% block content %}
 {% blocktrans with amount=amount donor_name=donor_name site=site link=link receiver=receiver %}
 
-Hello {{ first name }},
-
+Hello {{ first_name }},
+<br><br>
 You received a &euro; {{ amount }} donation from {{ donor_name }}.
-
+<br><br>
 Quickly thank your supporter by posting a personal message on your fundraiser page.
 {% endblocktrans %}
 {% endblock %}
