Updated base.mail to reflect reef...

--- a/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
+++ b/bluebottle/bb_donations/templates/bb_donations/mails/new_oneoff_donation_fundraiser.mail.html
@@ -13,5 +13,5 @@ Quickly thank your supporter by posting a personal message on your fundraiser pa
 {% endblock %}
 
 {% block action %}
-<a href="{{ site }}{{ link }}" class="action">{% trans 'Say thanks!' context 'email' %}!</a>
+<a href="{{ site }}{{ link }}" class="action">{% trans 'Say thanks' context 'email' %}!</a>
 {% endblock %}
