--- a/bluebottle/bb_tasks/templates/task_realised_owner.mail.html
+++ b/bluebottle/bb_tasks/templates/task_realised_owner.mail.html
@@ -6,12 +6,11 @@
 
 Hello {{ receiver_name }},
 
-The deadline of your task <i>{{ task_title }}</i> is reached.
+The deadline of your task is reached.
 <br><br>
-Is your task realised? Please confirm who participated and start evaluating.
+Is your task realised? Please confirm the participants.
 <br><br>
-Step 1. <a href="{{ site }}{{ task_link }}">Confirm participants</a>
-Step 2. <a href="{{ site }}{{ task_link }}">Start evaluation</a>
+<a href="{{ site }}{{ task_link }}">Confirm participants</a>
 <br><br>
 Too early to celebrate? By changing the deadline you can extend the task period. You can also choose to close the task. 
 {% endblocktrans %}
