--- a/bluebottle/utils/templates/utils/share_flyer.hbs
+++ b/bluebottle/utils/templates/utils/share_flyer.hbs
@@ -9,7 +9,7 @@
     <div class="modal-fullscreen-content">
         <span {{action 'closeModal'}} class="modal-fullscreen-close"></span>
         <h4>{% blocktrans %}Share a Project flyer{% endblocktrans %}</h4>
-        <big>{% trans "Share this project with your partners and/or invite them to join" %}
+        <big>{% trans "Share this project with your Accommodation Partners and/or your Booking colleagues and invite them to join" %}
              (<a href="/utils/share_flyer?projectid={{unbound model.projectid}}" target="_blank">{% trans "view example" %}</a>)
 
         </big>
