Fix fundRaiser to fundraiser

--- a/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser_donation_list.hbs
+++ b/bluebottle/bb_fundraisers/templates/bb_fundraisers/fundraiser_donation_list.hbs
@@ -18,10 +18,10 @@
                         </p>
                     </header>
 
-                    {{#if fundRaiseDonations.length}}
+                    {{#if fundraiseDonations.length}}
 
 	                    <table class="fund-history">
-			                {{#each donation in fundRaiseDonations}}
+			                {{#each donation in fundraiseDonations}}
 			                	{{view "App.ProjectDonationView" }}
                             {{/each}}
 			            </table>
