--- a/bluebottle/recurring_donations/templates/project_full_monthly_donor.mail.html
+++ b/bluebottle/recurring_donations/templates/project_full_monthly_donor.mail.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 
 {% block content %}
+{% blocktrans %}
 Hi {{ receiver_first_name }},<br/>
 <br/>
 
@@ -12,5 +13,6 @@ Let’s do some more good! Choose a new project you’d like to support [overzic
 
 Thanks for you loyal support! 
 <br/><br/>
+{% endblocktrans %}
 {% endblock %}
 
