--- a/bluebottle/recurring_donations/templates/monthly_donation.mail.html
+++ b/bluebottle/recurring_donations/templates/monthly_donation.mail.html
@@ -11,13 +11,13 @@ Thanks for you monthly do-good donation. You’re contribution makes a world of 
 
 On {{ date }} you contributed {{ amount }}. Below you’ll find an overview of the project(s) you supported. <br/><br/>
 
-
+{% endblocktrans %}
 {% for donation in order.donations.all %}
     <a href="{{ site }}/go/projects/{{ donation.project.slug }}">{{ donation.project.title }}</a>
     in {{ donation.project.country.name }}.<br/>
 {%  endfor %}
+{% blocktrans %}
 <br/><br/>
-
 Thanks to your support we were able to realize so many projects.
 {% endblocktrans %}
 {% endblock %}
