--- a/bluebottle/suggestions/templates/suggestions/suggestion_list.hbs
+++ b/bluebottle/suggestions/templates/suggestions/suggestion_list.hbs
@@ -25,7 +25,7 @@
                     </ul>
                     <span class="suggestion-description">
                         <em>{% blocktrans %}
-                            This local initiatives could use your help. Select a project suggestion to find out more.
+                            These local initiatives could use your help. Select a project suggestion to find out more.
                             {% endblocktrans %}</em>
                     </span>
                 </div>
