dashboard now displays both new and in progress project payout, instead of one according to superuser/staff

--- a/bluebottle/accounting/templates/admin/accounting/dashboard.html
+++ b/bluebottle/accounting/templates/admin/accounting/dashboard.html
@@ -94,7 +94,8 @@
                         <div class="form-row">
                             {% trans "Start" %}: {{ form.start }} {% trans "Stop" %}: {{ form.stop }}
 
-                            {% if 'tenant' in form.fields %}
+                            {# {% if 'tenant' in form.fields %} #}
+                            {% if True %}
                                 {% trans "Select tenant" %}: {{ form.tenant }}
                             {% endif %}
 
@@ -130,19 +131,18 @@
                                 amount: {{ data.donations_failed_amount|numberformat }}
                             </a>
                     </td></tr>
-                    {% if request.user.is_superuser %}
-                        <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=in_progress">SUPERUSER
-                            {{ data.project_payouts_pending_in_progress_count }} {% trans "pending project payouts" %} -
-                            amount: {{ data.project_payouts_pending_in_progress_amount|numberformat }}
+
+                    <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=in_progress">
+                        {{ data.project_payouts_pending_in_progress_count }} {% trans "pending project payouts (in progress)" %} -
+                        amount: {{ data.project_payouts_pending_in_progress_amount|numberformat }}
+                    </a>
+                    </td></tr>
+
+                    <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=new">
+                        {{ data.project_payouts_pending_new_count }} {% trans "pending project payouts (new)" %} -
+                            amount: {{ data.project_payouts_pending_new_amount|numberformat }}
                         </a>
-                        </td></tr>
-                    {% elif request.user.is_staff %}
-                        <tr><td><a href="{% url 'admin:payouts_projectpayout_changelist' %}?status__exact=new">STAFF
-                            {{ data.project_payouts_pending_new_count }} {% trans "pending project payouts" %} -
-                                amount: {{ data.project_payouts_pending_new_amount|numberformat }}
-                            </a>
-                        </td></tr>
-                    {% endif %}
+                    </td></tr>
 
                 </tbody>
             </table>
